Fix docked dialog tags not shrinking
Tabs representing docked dialogs should shrink in size when
there is not enough space for them. This includes shrinking text
labels, when shown, and potentially hiding them if need be.

Clipped text now fades out gradually.

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -1545,7 +1545,7 @@ listview row.top-separator {
     padding: 0 4px;
 }
 #SimpleTab {
-    min-width: 4em;
+    min-width: 1em;
     min-height: calc(2em + 4px);
 }
 #SimpleTab:hover {
